tests/fixtures/invalid/bytes_mod_int.py
# Cannot modulo Bytes and Int
x: bytes = b"hello" % 1
